--- a/views/index.ejs
+++ b/views/index.ejs
@@ -22,6 +22,12 @@
         Thông tin nhân viên y tế
       </div>
       <div class="card-body">
+        <div class="text-center" id="form-loading" style="display: none;">
+          <div class="spinner-border" role="status">
+            <span class="visually-hidden">Loading...</span>
+          </div>
+        </div>
+
         <form id="upload-form" enctype="multipart/form-data" action="/excel/upload" method="POST"
           onsubmit="return validateForm()">
           <div class="mt-2">
@@ -42,6 +48,7 @@
       var fileInput = document.querySelector('input[type="file"]');
       var successMessage = document.getElementById('success-message');
       var form = document.getElementById('upload-form');
+      var formLoading = document.getElementById('form-loading');
 
       var errorMessageElement = document.getElementById('error-message');
 
@@ -57,6 +64,9 @@
         // Create a FormData object to send the form data
         var formData = new FormData(form);
 
+        formLoading.style.display = 'block';
+        form.style.display = 'none';
+
         // Send the form data using an AJAX request
         var xhr = new XMLHttpRequest();
         xhr.open('POST', '/excel/upload', true);
@@ -68,9 +78,11 @@
 
             setTimeout(() => {
               successMessage.style.display = 'none';
-            }, 3000)
+            }, 5000)
 
             fileInput.value = '';
+            formLoading.style.display = 'none';
+            form.style.display = 'block';
           }
         };
         xhr.send(formData);
